[project]
name = "lasr-live-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cerdwin Gormal", email = "cerdwin.gormal@seznam.cz" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyright>=1.1.394",
]
